2023-XX-XX   0.1.2:
-------------------


2023-02-26   0.1.1:
-------------------
  * fix module name in `setup.py`


2023-02-26   0.1.0:
-------------------
  * initial release with 'cleanup' and 'tarinfo' commands