@@ -1,5 +1,5 @@
-install:
-	python setup.py install
+dev:
+	python setup.py develop
 
 
 test:
